--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<body>
 			<h1>SUPER ULTRA MEGABOGA CALCULADORA DE FUNÇÃO HORÁRIA DO DESLOCAMENTO</h1>
 			<img src="formula.gif" class="for">
-			<h4>Digite os valores que você tem</h4>
+			<h4>Digite os valores </h4>
 			
 			
 			So= <input name="question" type="text" id="v1"  value=""><br>
