--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 			<button onclick="Calcular()">GET YOUR RESULT </button><br>
 			<br>
 			<button onclick="again()">RESET NUMBER </button>
-			</form>
+			<br>
+			<img src="https://media.istockphoto.com/photos/profile-shot-of-a-pizza-delivery-guy-running-picture-id512450963">
+
+
 
 			
 
